added login and logout handlers

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,6 +14,14 @@
                 <div class="header item"><i class="paper plane icon"></i>Blog Site</div>
                 <a href="/" class="item">Home</a>
                 <a href="/blogs/new" class="item">New Post</a>
+                
+                <div class="right menu">
+                    <a href="/login" class="item">Login</a>
+                    <a href="/register" class="item">Sign Up</a>
+                    <a href="/logout" class="item">Logout</a>
+                 </div>
+
+                
             </div>
            
         </div>
