--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,9 +16,13 @@
                 <a href="/blogs/new" class="item">New Post</a>
                 
                 <div class="right menu">
-                    <a href="/login" class="item">Login</a>
-                    <a href="/register" class="item">Sign Up</a>
-                    <a href="/logout" class="item">Logout</a>
+                    <% if(!currentUser) { %>
+                        <a href="/login" class="item">Login</a>
+                        <a href="/register" class="item">Sign Up</a>
+                    <%} else { %>
+                        <a href="#" class="item">Signed in as <%= currentUser.username %></a>
+                        <a href="/logout" class="item">Logout</a>
+                    <% } %>
                  </div>
 
                 
