added styling to login and sign up pages

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -22,3 +22,11 @@ i.icon {
 	margin-bottom: 10px;
 	
 }
+
+#login-form-container {
+	max-width: 30% !important;
+}
+
+#register-form-container {
+	max-width: 30% !important;
+}
