--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,13 +1,26 @@
 <% include ./partials/header %>
 
-<h1>Login page</h1>
 
-<form action="/login" method="POST">
+<!-- <form action="/login" method="POST">
 	<input type="text" name="username" placeholder="username">
-	<input type="password" name="password" placeholder="password">
+	<input type="password" name="password" placeholder="username">
 	<button>Login</button>
-</form>
-
+</form> -->
+<div class="ui main text container segment" id="login-form-container">
+	<div class="ui medium header">Login</div>
+		<form class="ui form" action="/login" method="POST">
+		  <div class="field">
+		    <label>Username</label>
+		    <input type="text" name="username" placeholder="username">
+		  </div>
+		  <div class="field">
+		    <label>Password</label>
+		    <input type="password" name="password" placeholder="username">
+		  </div> 
+		  <button class="ui button" type="submit">Login</button>
+		</form>
+	</div>
+</div>
 
 
 
