--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,12 +1,22 @@
 <% include ./partials/header %>
 
-<h1>Sign up</h1>
 
-<form action="/register" method="POST">
-	<input type="text" name="username" placeholder="username">
-	<input type="password" name="password" placeholder="password">
-	<button>Sign up</button>
-</form>
+
+<div class="ui main text container segment" id="register-form-container">
+	<div class="ui medium header">Login</div>
+		<form class="ui form" action="/register" method="POST">
+		  <div class="field">
+		    <label>Username</label>
+		    <input type="text" name="username" placeholder="username">
+		  </div>
+		  <div class="field">
+		    <label>Password</label>
+		    <input type="password" name="password" placeholder="username">
+		  </div> 
+		  <button class="ui button" type="submit">Sign up</button>
+		</form>
+	</div>
+</div>
 
 <% include ./partials/footer %>
 
