--- a/views/show.ejs
+++ b/views/show.ejs
@@ -1,12 +1,14 @@
 <% include ./partials/header %>
 
+
+
 <div class="ui main text container segment">
     <div class="ui huge header"><%= blog.title %></div>
     <div class="ui top attached">
         <div class="item">
             <img class="ui centered rounded image" src="<%= blog.image %>">
             <div class="content">
-                <span><%= blog.created.toDateString() %></span>
+                <span>By&nbsp;<%= blog.author.username %>&nbsp;|&nbsp;<%= blog.created.toDateString() %></span>
             </div>
             <div class="description">
                 <p><%- blog.body %></p>
