added authorization for edit post

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -3,7 +3,7 @@
 
 
 <div class="ui main text container segment" id="register-form-container">
-	<div class="ui medium header">Login</div>
+	<div class="ui medium header">Sign up</div>
 		<form class="ui form" action="/register" method="POST">
 		  <div class="field">
 		    <label>Username</label>
